solved excercise problems

--- a/Fundamental/function.html
+++ b/Fundamental/function.html
@@ -46,6 +46,29 @@
             // return (a<b) ? a : b ;
         }
 
+        function add7 (a){
+           console.log(a+7);
+        }
+
+        function multiply(a, b){
+            console.log(a*b);
+        }
+
+        function capitalize(text){
+         
+          let value = text.toUpperCase().charAt(0);
+          console.log(value);
+        }
+
+        function lastLetter(text){
+            let value = text.slice(-1);
+            console.log(value);
+        }
+
+        let string = "asdv";
+        capitalize(string);
+        lastLetter(string);
+
     </script>
 </body>
 
